--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ a:focus {
 }*/
 
 .App-header {
-  background-color: #222;
+  background-color: slategrey;
   width: 98vw;
   height: 150px;
   padding: 20px;
@@ -70,5 +70,5 @@ header {
   }
   to {
     transform: rotate(360deg);
-  }*/
-}
+  }
+}*/
