--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,10 @@ header {
   background-color: red;
 }
 
+.Thumbnail img {
+  width: 20%;
+}
+
 @keyframes App-transition-spin {
   from {
     transform: rotate(0deg);
